<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tcss450.uw.edu.aboutme.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textButton"
        android:text="@string/text_button"
        android:onClick="textActivityStart"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_below="@id/textButton"
        android:text="@string/image_button"
        android:onClick="imageActivityStart"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/webButton"
        android:layout_below="@id/imageButton"
        android:text="@string/web_button"
        android:onClick="openWebPage"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toastButton"
        android:layout_below="@id/webButton"
        android:text="@string/toast_button"
        android:onClick="toasterPopper"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialogButton"
        android:layout_below="@id/toastButton"
        android:text="@string/dialog_button"
        android:onClick="dialogBoxOpen"/>
</RelativeLayout>
